<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.shubham1172.piedpiper.ACActivity"
    android:padding="50dp">

    <RelativeLayout android:layout_width="wrap_content"
        android:layout_height="match_parent"
        tools:context="com.shubham1172.piedpiper.ACActivity"
        android:padding="10dp"
        android:layout_centerInParent="true">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:id="@+id/power_buttons"
            android:layout_centerVertical="true">

            <Button
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="@drawable/acbutton"
                android:text="@string/ac_on"
                android:id="@+id/on_ac"
                android:onClick="onClick"
                android:layout_marginBottom="5dp"/>

            <Button
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="@drawable/acbutton"
                android:text="@string/ac_off"
                android:id="@+id/off_ac"
                android:onClick="onClick"/>


        </LinearLayout>

        <LinearLayout
            android:paddingLeft="30dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_toRightOf="@id/power_buttons"
            android:layout_centerVertical="true">

            <Button
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:background="@drawable/semiacbutton"
                android:id="@+id/high_ac"
                android:onClick="onClick"
                android:text="@string/temp_high"/>

            <Button
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:background="@drawable/semiacbutton"
                android:rotation="180"
                android:id="@+id/low_ac"
                android:onClick="onClick"
                android:layout_marginTop="5dp"
                android:text="@string/temp_low"/>

        </LinearLayout>

    </RelativeLayout>

</RelativeLayout>
